# agent-identity-bridge

./: .dockerignore  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_PROTOCOLS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ERROR_CODES.md  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  SPEC.md  THREAT_MODEL.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent-pipeline.yml  ci.yml  publish.yml  tests.yml
aib/: __init__.py  ag_ui_binding.py  cli.py  client.py  cloud.py  crypto.py  diagnostics.py  discovery.py  gateway_integration.py  gdpr.py  hardening_sprint1.py  hardening_sprint2.py  hardening_sprint3.py  lifecycle.py  main.py  merkle.py  migration.py  oidc.py  passport.py  plugins.py  policy_engine.py  protocol_health.py  rate_limiter.py  receipts.py  renewal.py  schema_validator.py  security_hardening.py  security_patches.py  sprint4a.py  sprint4b.py  sprint5_enterprise.py  sprint6_final.py  translator.py  webhooks.py
aib/bindings/: __init__.py  binding_example.py
aib/integrations/: __init__.py
cli/: README.md  package-lock.json  package.json
cli/src/commands/: guard.js  passport.js  policy.js  translate.js
cli/src/lib/: crypto.js  passport.js  policy.js  translator.js
cli/tests/: audit.mjs
cloud/: README.md
cloud/edge-functions/auth/: index.ts
cloud/edge-functions/passport-create/: index.ts
cloud/edge-functions/passport-list/: index.ts
cloud/edge-functions/passport-revoke/: index.ts
cloud/edge-functions/policy-manage/: index.ts
cloud/edge-functions/translate/: index.ts
cloud/edge-functions/usage-check/: index.ts
cloud/edge-functions/usage-history/: index.ts
cloud/landing/: .gitignore  aib-tech-index.html  blog.html  builder.html  cgv.html  compliance-finance.html  compliance-health.html  compliance-legal.html  compliance.html  dashboard-example.html  dashboard.html  frameworks.html  index.html  kits.html  netlify.toml  oauth-debug.html  pricing.html  risk.html  roadmap.html  robots.txt  sitemap.xml  spec.html  status.html  usecases.html  viz.html  why.html
cloud/landing/blog/: article.html  json-web-tokens-vs-verifiable-credentials-choosing-the-right-authentication-meth-mng8wsp0-en.html  managed-agents-identite-cryptographique.html  prompt-injection-in-agent-to-agent-communication-how-verified-identity-prevents--mng99e1v-fr.html
cloud/schema/: schema.sql
docs/: AGENT_FLEET.md  AGENT_REGISTRY.md  CHANGELOG_2026-04-06.md  PLATFORM_STATS.md
docs/api/: aib.html  index.html  search.js
docs/api/aib/: ag_ui_binding.html  audit.html  bindings.html  cli.html  client.html  crypto.html  diagnostics.html  discovery.html  gateway.html  gateway_integration.html  gdpr.html  hardening_sprint1.html  hardening_sprint2.html  hardening_sprint3.html  lifecycle.html  main.html  merkle.html  migration.html  oidc.html  passport.html  plugins.html  policy_engine.html  protocol_health.html  rate_limiter.html  receipts.html  renewal.html  schema_validator.html  schemas.html  security.html  security_hardening.html  security_patches.html  sprint4a.html  sprint4b.html  sprint5_enterprise.html  sprint6_final.html  translator.html  webhooks.html
examples/: quickstart.py
sdk-cloud-ts/: package.json
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: client.ts  index.ts  translator.ts  types.ts
sdk-ts/tests/: sdk.test.js
tests/: test_ag_ui_binding.py  test_cli.py  test_client.py  test_cloud_sdk.py  test_diagnostics.py  test_discovery.py  test_gateway_integration.py  test_gdpr.py  test_hardening.py  test_hardening_sprint1.py  test_hardening_sprint2.py  test_hardening_sprint3.py  test_integration.py  test_integrations.py  test_lifecycle.py  test_merkle.py  test_migration.py  test_oidc.py  test_patches.py  test_plugins.py  test_policy_engine.py  test_protocol_health.py  test_rate_limiter.py  test_receipts.py  test_renewal.py  test_schema_validator.py  test_sprint4a.py  test_sprint4b.py  test_sprint5_enterprise.py  test_sprint6_final.py  test_translator_agui.py  test_webhooks.py
(+1 files in other folders)
